# course_work_sql

./: .gitignore  README.md  main.py  pyproject.toml
data/: companies.json  database.ini
src/: class_DBManager.py
