[tool.poetry]
name = "course-work-sql"
version = "0.1.0"
description = ""
authors = ["Kasaev Alexei <kasaev_97@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
requests = "^2.31.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.8.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
